Start to support search function by words
We can search functions words split by space no matter the order

--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
       {
         "command": "search-enhancement.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "extension.searchFunctions",
+        "title": "Search Functions by Keywords"
       }
+    ],
+    "keybindings": [
+        {
+            "command": "extension.searchFunctions",
+            "key": "ctrl+shift+f",
+            "when": "editorTextFocus"
+        }
     ]
   },
   "scripts": {
